[gd_scene load_steps=11 format=3 uid="uid://cgmcr1b4y5kgv"]

[ext_resource type="Script" uid="uid://6ilxclsfdaif" path="res://Scripts/Planet.gd" id="1_qbmra"]
[ext_resource type="Resource" uid="uid://cj7v4h121rn6" path="res://Data/Planets/osiris_prime.tres" id="2_hjx7e"]
[ext_resource type="Texture2D" uid="uid://cseq06ecvtn38" path="res://Planet Assets/Large Planets 512x512/Solid/Terrestrial/Terrestrial_03-512x512.png" id="2_mcvm8"]
[ext_resource type="Script" uid="uid://xkqsn1wsbbcd" path="res://Scripts/PlanetUI.gd" id="3_m0iey"]
[ext_resource type="Script" uid="uid://bvg0w0yo16vun" path="res://Scripts/PlanetDockManager.gd" id="4_ytj11"]
[ext_resource type="FontFile" uid="uid://cho13riygas28" path="res://fonts/SairaCondensed-Regular.ttf" id="5_kmany"]
[ext_resource type="Theme" uid="uid://c720yo72r5nrm" path="res://Themes/DefaultTheme.theme" id="5_w18ph"]
[ext_resource type="Texture2D" uid="uid://gsanmolbyd73" path="res://textures/Bars/BubbleBg.png" id="6_w18ph"]
[ext_resource type="FontFile" uid="uid://c6gu8xdo3cqgr" path="res://fonts/SairaCondensed-Bold.ttf" id="7_hjx7e"]

[sub_resource type="CircleShape2D" id="CircleShape2D_joiy7"]

[node name="Planet" type="Node2D"]
script = ExtResource("1_qbmra")
data = ExtResource("2_hjx7e")
orbit_speed = 0.08

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = -2.26893
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_mcvm8")

[node name="DockingArea" type="Area2D" parent="."]
scale = Vector2(10, 10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DockingArea"]
shape = SubResource("CircleShape2D_joiy7")

[node name="PlanetUI" type="Control" parent="." node_paths=PackedStringArray("planet_reference")]
layout_mode = 3
anchors_preset = 0
offset_left = -97.0
offset_top = -99.0
offset_right = 97.0
offset_bottom = 99.0
script = ExtResource("3_m0iey")
planet_reference = NodePath("..")

[node name="MarginContainer" type="MarginContainer" parent="PlanetUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InteractionBG" type="TextureRect" parent="PlanetUI/MarginContainer"]
self_modulate = Color(0.17029959, 0.0779917, 0.9999998, 1)
layout_mode = 2
texture = ExtResource("6_w18ph")
expand_mode = 3

[node name="InteractionPrompt" type="RichTextLabel" parent="PlanetUI/MarginContainer/InteractionBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_w18ph")
theme_override_colors/default_color = Color(0, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/normal_font = ExtResource("5_kmany")
theme_override_fonts/bold_font = ExtResource("7_hjx7e")
text = "Dock [E]"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlanetDockManager" type="Node" parent="."]
script = ExtResource("4_ytj11")

[connection signal="body_entered" from="DockingArea" to="." method="_on_docking_area_body_entered"]
[connection signal="body_exited" from="DockingArea" to="." method="_on_docking_area_body_exited"]
